Fixed extra whitespace by changing content div's margin to padding values. Fixed name in package.json. Moved .content css into app.css instead of in both search and dashboard

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,10 @@
     background-color: var(--theme);
     color: var(--primary);
   }
+
+  .content {
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 25px;
+}
