--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -1,10 +1,3 @@
-.content {
-    text-align: center;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 25px;
-}
-
 .card-container {
     display: flex;
     justify-content: center;
