--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,10 +1,3 @@
-.content {
-    text-align: center;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 25px;
-}
-
 label {
     margin-right: 5px;
     margin-bottom: 5px;
@@ -42,10 +35,6 @@ a > * {
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 15px;
-}
-
-.img-wrapper {
-
 }
 
 .card-img {
